Second part of refactor