@@ -1,19 +1,17 @@
 package abstracfactory;
 
 import board.Board;
-import board.BoardFactory;
 import board.RectangularBoard;
 import cell.CellFactory;
 import cell.CellFactoryTraditionalGame;
-import rule.BirthRule;
-import rule.Rule;
-import rule.RuleFactory;
+import rule.*;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class TraditionalFactory implements AbstracFactory{
+
+    public TraditionalFactory(){}
 
     @Override
     public Board createBoardFactory(Integer rows, Integer cols, String configInitial) {
@@ -25,10 +23,14 @@ public class TraditionalFactory implements AbstracFactory{
     @Override
     public List<Rule> createRuleFactory() {
         List<Rule> rules = new ArrayList<>();
-        Rule rule1 = new BirthRule(Arrays.asList(2,3));
+        Rule rule1 = new BirthRule(List.of(2));
+        Rule rule2 = new SurviveRule(List.of(2,3));
+        Rule rule3 = new DeathRule();
+        rules.add(rule1);
+        rules.add(rule2);
+        rules.add(rule3);
 
-
-        return null;
+        return rules;
     }
 }
 
